--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta name="author" content="Aurele Barbancon">
+    <meta name="copyright" content="Aurele Barbancon 2022. All Rights Reserved.">
+    <meta name="website-name" content="Aurele Barbancon">
+    <meta name="keywords" content="Aurele Barbancon, full-stack, developer, engineer, portfolio">
+    <meta name="google" content="nositelinkssearchbox">
+    <meta name="robots" content="all">
+    <meta name="description" content="This the the portfolio website of Aurele Barbancon, fullstack developer">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Aurele Barbancon">
+    <meta property="og:description" content="This the the portfolio website of Aurele Barbancon, fullstack developer">
+    <meta property="og:image" content="resources/img/social.png">
+    <meta property="twitter:title" content="Aurele Barbancon">
+    <meta property="twitter:description" content="This the the portfolio website of Aurele Barbancon, fullstack developer">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/jpg" href="./favicon.png">
+    <link rel="stylesheet" href="../src/index.css">
+    <link rel="stylesheet" href="../src/reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;300;400&family=Kanit:wght@400;500;600;700&family=Raleway&display=swap" rel="stylesheet">
+    <meta name="title" content="Aurele Barbancon">
+    <title>Aurele Barbancon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <video autoplay muted loop poster='./src/resources/img/underwater.png' id='video1'>
+      <source src='./underwater.mp4' type='video/mp4' >
+    </video>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
