--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="../src/index.css">
     <link rel="stylesheet" href="../src/reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;300;400&family=Kanit:wght@400;500;600;700&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600&family=Alexandria:wght@200;300;400&family=Kanit:wght@400;500;600;700&family=Raleway&display=swap" rel="stylesheet">
     <meta name="title" content="Aurele Barbancon">
     <title>Aurele Barbancon</title>
   </head>
